Fix border bleed in the bottom edges

--- a/gtk/src/gtk-3.0/_common.scss
+++ b/gtk/src/gtk-3.0/_common.scss
@@ -4761,6 +4761,9 @@ button.emoji-section {
   label {
     padding: 0;
   }
+
+  &:first-child { border-bottom-left-radius: $small_radius; }
+  &:last-child { border-bottom-right-radius: $small_radius; }
 }
 
 .emoji {
